--- a/src/main/resources/messages/admin.yml
+++ b/src/main/resources/messages/admin.yml
@@ -4,7 +4,7 @@
 #                                                #
 ##################################################
 
-#Placeholders: %rank% %player% %player_kills% %player_live% %date% %online_players% %server_prefix_admin%
+#Placeholders: %rank% %player% %player_kills% %player_deaths% %player_live% %date% %online_players% %server_prefix_admin%
 #Custom colors: <hex:CODE> || <gradient:START_CODE>Example Text<!gradient:END_CODE>
 
 admin:
